applications/unitn-tg-bot/base/notification-dispatcher.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    io.kompose.service: notification-dispatcher
  name: notification-dispatcher
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: notification-dispatcher
  template:
    metadata:
      labels:
        io.kompose.service: notification-dispatcher
    spec:
      containers:
        - env:
            - name: KAFKA_TOPIC
              value: notifications
          image: ghcr.io/agusmeroli/unitntgbot-notification_dispatcher:v0.1.4@sha256:c3ea853b292bce6da6e0ba5f96870da716a985b334aebbc175a0951082703eb7
          name: notification-dispatcher
      restartPolicy: Always
