applications/unitn-tg-bot/base/telegram-bot.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    io.kompose.service: telegram-bot
  name: telegram-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: telegram-bot
  template:
    metadata:
      labels:
        io.kompose.service: telegram-bot
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Rome
          image: ghcr.io/agusmeroli/unitntgbot-bot_frontend:v0.1.4@sha256:4bb03626fab7f1161ed97e3636362dd81f12fc55e7da6a12a0f9a72f333211f5
          name: telegram-bot
          volumeMounts:
            - mountPath: /db
              name: bot-data
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        labels:
          io.kompose.service: bot-data
        name: bot-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
