applications/unitn-tg-bot/base/canteen-svc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    io.kompose.service: canteen-svc
  name: canteen-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: canteen-svc
  serviceName: canteen-svc
  template:
    metadata:
      labels:
        io.kompose.service: canteen-svc
    spec:
      containers:
        - env:
            - name: KAFKA_TOPIC
              value: notifications
          image: ghcr.io/agusmeroli/unitntgbot-canteen:v0.1.4@sha256:5f7a6f6c1b99641253c0aee83bebdbcbad4ad61ae23d95f7bcf38020f9485d99
          name: canteen-svc
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /db
              name: canteen-data
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        labels:
          io.kompose.service: canteen-data
        name: canteen-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: canteen-svc
  name: canteen-svc
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: canteen-svc
