applications/unitn-tg-bot/base/exams-svc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    io.kompose.service: exams-svc
  name: exams-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: exams-svc
  serviceName: exams-svc
  template:
    metadata:
      labels:
        io.kompose.service: exams-svc
    spec:
      containers:
        - env:
            - name: KAFKA_TOPIC
              value: notifications
          name: exams-svc
          image: ghcr.io/agusmeroli/unitntgbot-exams:v0.1.4@sha256:bf94f0aaedc0ed206487a6852a5f9cc9b2260add09543572cbd42a3ac357f2bb
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /db
              name: exams-data
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        labels:
          io.kompose.service: exams-data
        name: exams-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: exams-svc
  name: exams-svc
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: exams-svc
