applications/unitn-tg-bot/base/lectures-svc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    io.kompose.service: lectures-svc
  name: lectures-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: lectures-svc
  serviceName: lectures-svc
  template:
    metadata:
      labels:
        io.kompose.service: lectures-svc
    spec:
      containers:
        - env:
            - name: KAFKA_TOPIC
              value: notifications
          image: ghcr.io/agusmeroli/unitntgbot-lectures:v0.1.4@sha256:2a947e159c4e7dec0861fd5d3bcdb3ce3548fae399fa6237fe93a3b61bffe04d
          name: lectures-svc
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /db
              name: lectures-data
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        labels:
          io.kompose.service: lectures-data
        name: lectures-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: lectures-svc
  name: lectures-svc
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: lectures-svc
