applications/unitn-tg-bot/base/maps-svc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    io.kompose.service: maps-svc
  name: maps-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: maps-svc
  serviceName: maps-svc
  template:
    metadata:
      labels:
        io.kompose.service: maps-svc
    spec:
      containers:
        - image: ghcr.io/agusmeroli/unitntgbot-maps:v0.1.4@sha256:84c05b44d26e2f8391c0d5e6a6eedba4789810e57bff21d17d4bcf7ac78d035d
          name: maps-svc
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: maps-svc
  name: maps-svc
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: maps-svc
