applications/unitn-tg-bot/base/rooms-svc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    io.kompose.service: rooms-svc
  name: rooms-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rooms-svc
  serviceName: rooms-svc
  template:
    metadata:
      labels:
        io.kompose.service: rooms-svc
    spec:
      containers:
        - image: ghcr.io/agusmeroli/unitntgbot-rooms:v0.1.4@sha256:5bf1ece07f0c0cbff1626c004a3cec01174cc97e39c5ba0b80e6ffc62112f2ba
          name: rooms-svc
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: rooms-svc
  name: rooms-svc
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: rooms-svc
