applications/unitn-tg-bot/base/tt-svc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    io.kompose.service: tt-svc
  name: tt-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tt-svc
  serviceName: tt-svc
  template:
    metadata:
      labels:
        io.kompose.service: tt-svc
    spec:
      containers:
        - image: ghcr.io/agusmeroli/unitntgbot-tt:v0.1.4@sha256:52fa4fd85e6971a871364a3a419a0984820129d8fe9d7cf08363fde8550162c9
          name: tt-svc
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: tt-svc
  name: tt-svc
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: tt-svc
